# pdfgrabba

./: .gitignore  CLAUDE.md  LICENSE  README.md  config_example.yaml  pyproject.toml
pdfgrabba/: cli.py  config.py  download.py  manifest.py
